docs(openapi): update users openapi spec
